imported _normalize.scss and _variables.scss

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
+// @imports
+@import './normalize';
+@import './variables';
+
 body {
-    background: antiquewhite;
+    background: papayawhip;
 }
